<resources>
    <string name="app_name">AtvCalculadora</string>
    <string name="btZero">0</string>
    <string name="btUm">1</string>
    <string name="btDois">2</string>
    <string name="btTres">3</string>
    <string name="btQuatro">4</string>
    <string name="btCinco">5</string>
    <string name="btSeis">6</string>
    <string name="btSete">7</string>
    <string name="btOito">8</string>
    <string name="btNove">9</string>
    <string name="btSoma">+</string>
    <string name="btSubtracao">-</string>
    <string name="btMultiplicacao">X</string>
    <string name="btDivisao">/</string>
    <string name="btLimpar">C</string>
    <string name="btPonto">.</string>
    <string name="btResultado">=</string>
</resources>