<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tvNumeros"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:text="TextView" />

        <Button
            android:id="@+id/btLimpar"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:backgroundTint="#FF9800"
            android:insetRight="10dp"
            android:text="@string/btLimpar"
            android:textSize="16sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btSete"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btSete"
                android:textSize="20sp"
                app:iconTint="#E91E63" />

            <Button
                android:id="@+id/btOito"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btOito"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btNove"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btNove"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btDivisao"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btDivisao"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btQuatro"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btQuatro"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btCinco"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btCinco"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSeis"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btSeis"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btMultiplicacao"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btUm"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btUm"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btDois"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btDois"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btTres"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btTres"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSubtracao"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btSubtracao"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/btZero"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btZero"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btPonto"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#184D77"
                android:text="@string/btPonto"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSoma"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:insetTop="6dp"
                android:text="@string/btSoma"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btResultado"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/btResultado"
                android:textSize="16sp" />

        </TableRow>
    </TableLayout>

</LinearLayout>